Remove availibility api